# celers

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml
crates/celers/: Cargo.toml  README.md  TODO.md
crates/celers-backend-db/: Cargo.toml  README.md  TODO.md
crates/celers-backend-db/migrations/: 001_init_mysql.sql  001_init_postgres.sql
crates/celers-backend-db/src/: event_persistence.rs  lib.rs  lock.rs  result_store.rs
crates/celers-backend-redis/: Cargo.toml  MIGRATION.md  PERFORMANCE.md  README.md  TODO.md
crates/celers-backend-redis/benches/: backend_bench.rs
crates/celers-backend-redis/examples/: advanced_observability.rs  backend_redis_advanced_features.rs  backend_redis_basic_usage.rs  chord_operations.rs  convenience_methods.rs  progress_tracking.rs
crates/celers-backend-redis/src/: backend.rs  batch_stream.rs  cache.rs  chunking.rs  compression.rs  encryption.rs  event_transport.rs  lib.rs  lock.rs  metrics.rs  monitoring.rs  pipeline.rs  profiler.rs  query.rs  result_backend_trait.rs  result_store.rs  retry.rs  stats.rs  telemetry.rs  tests.rs  trait_impl.rs  types.rs  utilities.rs
crates/celers-backend-rpc/: Cargo.toml  README.md  TODO.md  build.rs
crates/celers-backend-rpc/proto/: result_backend.proto
crates/celers-backend-rpc/src/: lib.rs  result_store.rs
crates/celers-beat/: CELERY_MIGRATION.md  CRONTAB_GUIDE.md  Cargo.toml  PRODUCTION_GUIDE.md  README.md  TODO.md  schedules.json
crates/celers-beat/benches/: scheduler_benchmarks.rs
crates/celers-beat/examples/: beat_advanced_features.rs  cli_utilities.rs  production_deployment.rs  schedule_builders.rs  scheduler_utilities.rs  simple_scheduler.rs  timezone_utilities.rs  weighted_fair_queuing.rs
crates/celers-beat/src/: alert.rs  config.rs  heartbeat.rs  history.rs  lib.rs  lock.rs  schedule.rs  schedule_ext.rs  scheduler.rs  scheduler_ext.rs  task.rs  wfq.rs
crates/celers-broker-amqp/: Cargo.toml  README.md  TODO.md
crates/celers-broker-amqp/benches/: amqp_benchmarks.rs
crates/celers-broker-amqp/examples/: advanced_monitoring.rs  amqp_monitoring_utilities.rs  amqp_priority_queue.rs  basic_publish_consume.rs  batch_publish.rs  dead_letter_exchange.rs  management_api.rs  modern_queue_features.rs  production_patterns.rs  streaming_consumer.rs  transaction.rs  v6_features_demo.rs  v7_features_demo.rs  v8_features_demo.rs  v9_features_demo.rs  v9_production_integration.rs
crates/celers-broker-amqp/src/: backpressure.rs  batch_ops.rs  batch_optimizer.rs  broker_core.rs  bulkhead.rs  circuit_breaker.rs  compression.rs  consumer_groups.rs  dlx_analytics.rs  event_transport.rs  hooks.rs  lib.rs  management.rs  metrics_export.rs  monitoring.rs  optimization.rs  poison_detector.rs  pool.rs  profiler.rs  queue_ops.rs  rate_limiter.rs  retry.rs  router.rs  scheduler.rs  tests.rs  topic_routing.rs  topology.rs  tracing_util.rs  types.rs  utilities.rs
crates/celers-broker-postgres/: Cargo.toml  README.md  TODO.md
crates/celers-broker-postgres/benches/: broker_benchmarks.rs
crates/celers-broker-postgres/examples/: README.md  postgres_advanced_utilities.rs  postgres_basic_usage.rs  postgres_monitoring_performance.rs
crates/celers-broker-postgres/migrations/: 001_init.sql  002_results.sql  003_partitioning.sql  004_deduplication.sql
crates/celers-broker-postgres/src/: advanced_ops.rs  analytics.rs  broker_core.rs  broker_trait.rs  convenience.rs  db_monitoring.rs  deduplication.rs  dlq.rs  health.rs  lib.rs  monitoring.rs  notifications.rs  partitions.rs  query_optimization.rs  queue_ops.rs  results.rs  scheduling.rs  tests.rs  types.rs  utilities.rs  workflows.rs
crates/celers-broker-redis/: Cargo.toml  README.md  TODO.md
crates/celers-broker-redis/benches/: redis_broker_benchmarks.rs
crates/celers-broker-redis/examples/: README.md  cost_optimization.rs  geo_distribution.rs  redis_advanced_features.rs  redis_basic_usage.rs  redis_monitoring_performance.rs  resilience_features.rs
crates/celers-broker-redis/src/: advanced_queue.rs  authorization.rs  backup_restore.rs  batch_ext.rs  bulkhead.rs  circuit_breaker.rs  cluster.rs  compression.rs  connection.rs  cron_scheduler.rs  dedup.rs  degradation.rs  dlq_analytics.rs  dlq_archival.rs  dlq_replay.rs  encryption.rs  geo.rs  health.rs  hooks.rs  hooks_advanced.rs  integrity.rs  lib.rs  locks.rs  lua_scripts.rs  metrics_ext.rs  monitoring.rs  otel_integration.rs  partitioning.rs  pipeline_advanced.rs  pool.rs  pool_advanced.rs  priority_mgmt.rs  queue_control.rs  quota_mgmt.rs  rate_limit.rs  result_backend.rs  retry.rs  sentinel.rs  streams.rs  structured_logging.rs  (+5 more)
crates/celers-broker-sql/: Cargo.toml  README.md  TODO.md
crates/celers-broker-sql/benches/: README.md  broker_benchmark.rs
crates/celers-broker-sql/examples/: README.md  advanced_queue_management.rs  advanced_retry.rs  batch_results.rs  bulk_import_export.rs  circuit_breaker.rs  distributed_tracing.rs  drain_mode.rs  idempotency_keys.rs  lifecycle_hooks.rs  monitoring_utilities.rs  production_operations.rs  recurring_tasks.rs  sql_basic_usage.rs  sql_monitoring_performance.rs  task_groups.rs  task_producer.rs  worker_heartbeat.rs  worker_pool.rs
crates/celers-broker-sql/migrations/: 000_migrations.sql  001_init.sql  002_results.sql  003_performance_indexes.sql  004_partitioning_guide.sql  005_uuid_optimization.sql  006_idempotency.sql  007_workflow.sql  008_production_features.sql
crates/celers-broker-sqs/: Cargo.toml  README.md  TODO.md
crates/celers-canvas/: Cargo.toml  DESIGN_PATTERNS.md  MIGRATION.md  README.md  TODO.md
crates/celers-cli/: Cargo.toml  README.md  TODO.md
crates/celers-core/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
crates/celers-examples/: Cargo.toml  README.md
crates/celers-kombu/: Cargo.toml  README.md  TODO.md
crates/celers-macros/: Cargo.toml  README.md  TODO.md
crates/celers-metrics/: Cargo.toml  README.md  TODO.md
crates/celers-protocol/: Cargo.toml  README.md  TODO.md
crates/celers-worker/: Cargo.toml  README.md  TODO.md  TROUBLESHOOTING.md
(+383 files in other folders)
