[workspace]
members = [
    # Facade
    "crates/celers",

    # Core & Protocol (The "Vine" & "Celery Core" equivalent)
    "crates/celers-core",
    "crates/celers-protocol",

    # Messaging Layer (The "Kombu" equivalent)
    "crates/celers-kombu",
    "crates/celers-broker-redis",
    "crates/celers-broker-postgres",
    "crates/celers-broker-amqp",
    "crates/celers-broker-sqs",
    "crates/celers-broker-sql",

    # Result Backend Layer
    "crates/celers-backend-redis",

    # Runtime & Workflow (The "Billiard" & "Canvas" equivalent)
    "crates/celers-worker",
    "crates/celers-canvas",
    "crates/celers-beat",

    # Utilities
    "crates/celers-macros",
    "crates/celers-cli",
    "crates/celers-metrics",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["COOLJAPAN OU (Team KitaSan)"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/celers"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "3.0.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

# Broker implementations
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# CLI and utilities
clap = { version = "4.5.53", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
hostname = "0.4.1"
regex = "1.11"
rand = "0.9"
flate2 = "1.0"

# Root package for examples
[package]
name = "celers-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Facade (re-exports everything)
celers = { path = "crates/celers" }

# Core & Protocol
celers-core = { path = "crates/celers-core" }
celers-protocol = { path = "crates/celers-protocol" }

# Messaging Layer
celers-kombu = { path = "crates/celers-kombu" }
celers-broker-redis = { path = "crates/celers-broker-redis" }
celers-broker-postgres = { path = "crates/celers-broker-postgres" }
celers-broker-amqp = { path = "crates/celers-broker-amqp" }
celers-broker-sqs = { path = "crates/celers-broker-sqs" }
celers-broker-sql = { path = "crates/celers-broker-sql" }

# Result Backend
celers-backend-redis = { path = "crates/celers-backend-redis" }

# Runtime & Workflow
celers-worker = { path = "crates/celers-worker" }
celers-canvas = { path = "crates/celers-canvas" }
celers-beat = { path = "crates/celers-beat" }

# Utilities
celers-macros = { path = "crates/celers-macros" }
celers-metrics = { path = "crates/celers-metrics" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
futures-util = "0.3.31"

[[example]]
name = "prometheus_metrics"
required-features = ["metrics"]

[features]
default = []
metrics = ["celers-worker/metrics", "celers-broker-redis/metrics"]
workflows = ["celers-worker/workflows", "celers-canvas/backend-redis"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "queue_operations"
harness = false

[[bench]]
name = "batch_operations"
harness = false

# Bundle size optimization profiles
[profile.release]
# Enable link-time optimization for smaller binaries
lto = true
# Use a single code generation unit for better optimization
codegen-units = 1
# Strip debug symbols to reduce binary size
strip = true
# Maximum optimization level
opt-level = 3

[profile.release-small]
# Optimize for size rather than speed
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
# Optimize for speed with moderate size
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
