[package]
name = "celers-backend-db"
version = "0.1.0"
edition = "2021"
authors = ["CeleRS Contributors"]
description = "Database (PostgreSQL/MySQL) result backend for CeleRS"
keywords = ["celery", "database", "backend", "postgresql", "mysql"]
categories = ["asynchronous", "database"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/celers"

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1.42", features = ["full"] }

# SQL client supporting both PostgreSQL and MySQL
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "chrono", "uuid", "json"] }

# Core protocol
celers-core = { path = "../celers-core" }
celers-protocol = { path = "../celers-protocol" }

# Re-export types from backend-redis for trait compatibility
celers-backend-redis = { path = "../celers-backend-redis" }

[features]
default = ["postgres"]
postgres = []
mysql = []

[dev-dependencies]
tokio-test = "0.4"
