[package]
name = "celers-backend-redis"
version = "0.1.0"
edition = "2021"
authors = ["CeleRS Contributors"]
description = "Redis result backend for CeleRS"
keywords = ["celery", "redis", "backend", "results", "async"]
categories = ["asynchronous", "network-programming", "caching"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/celers"

[dependencies]
async-trait = "0.1"
redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager", "aio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tracing = "0.1"
tokio = { version = "1.48", features = ["sync"] }
flate2 = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"

# Core protocol
celers-core = { path = "../celers-core" }
celers-protocol = { path = "../celers-protocol" }

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
