[package]
name = "celers-backend-redis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis result backend for CeleRS"
keywords = ["celery", "redis", "backend", "results", "async"]
categories = ["asynchronous", "network-programming", "caching"]

[dependencies]
async-trait = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Core protocol
celers-core = { path = "../celers-core", version = "0.1.0" }
celers-protocol = { path = "../celers-protocol", version = "0.1.0" }

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "backend_bench"
harness = false
