[package]
name = "celers-backend-rpc"
version = "0.1.0"
edition = "2021"
authors = ["CeleRS Contributors"]
description = "gRPC/RPC result backend for CeleRS"
keywords = ["celery", "grpc", "rpc", "backend", "microservices"]
categories = ["asynchronous", "network-programming", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/celers"

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1.42", features = ["full"] }

# gRPC dependencies
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Core protocol
celers-core = { path = "../celers-core" }
celers-protocol = { path = "../celers-protocol" }

# Re-export types from backend-redis for trait compatibility
celers-backend-redis = { path = "../celers-backend-redis" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
