[package]
name = "celers-backend-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC/RPC result backend for CeleRS"
keywords = ["celery", "grpc", "rpc", "backend", "microservices"]
categories = ["asynchronous", "network-programming", "web-programming"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# gRPC dependencies
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Core protocol
celers-core = { path = "../celers-core", version = "0.1.0" }
celers-protocol = { path = "../celers-protocol", version = "0.1.0" }

# Re-export types from backend-redis for trait compatibility
celers-backend-redis = { path = "../celers-backend-redis", version = "0.1.0" }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
