[package]
name = "celers-beat"
version = "0.1.0"
edition = "2021"
authors = ["CeleRS Contributors"]
description = "Periodic task scheduler for CeleRS (Celery Beat equivalent)"
keywords = ["celery", "scheduler", "cron", "periodic", "beat"]
categories = ["asynchronous", "date-and-time"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/celers"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["time"] }

# Core dependencies
celers-protocol = { path = "../celers-protocol" }

# Optional: Cron expression parsing
cron = { version = "0.12", optional = true }

# Optional: Solar event calculation
sunrise = { version = "1.2", optional = true }

[features]
default = []
cron = ["dep:cron"]
solar = ["dep:sunrise"]

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
