[package]
name = "celers-broker-amqp"
version = "0.1.0"
edition = "2021"
authors = ["CeleRS Contributors"]
description = "RabbitMQ/AMQP broker implementation for CeleRS"
keywords = ["celery", "rabbitmq", "amqp", "broker", "messaging"]
categories = ["asynchronous", "network-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/celers"

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4"] }
tracing = "0.1"
rand = "0.8"
flate2 = "1.1"
zstd = "0.13"

# AMQP client
lapin = "3.7"
tokio = { version = "1.49", features = ["full"] }

# HTTP client for RabbitMQ Management API
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2.1"

# Core dependencies
celers-protocol = { path = "../celers-protocol" }
celers-kombu = { path = "../celers-kombu" }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
futures = "0.3"
criterion = { version = "0.8", features = ["async_tokio"] }

[[bench]]
name = "amqp_benchmarks"
harness = false
