[package]
name = "celers-broker-amqp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RabbitMQ/AMQP broker implementation for CeleRS"
keywords = ["celery", "rabbitmq", "amqp", "broker", "messaging"]
categories = ["asynchronous", "network-programming"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
oxiarc-deflate = { workspace = true }
oxiarc-zstd = { workspace = true }

# AMQP client
lapin = { workspace = true }
tokio = { workspace = true }

# HTTP client for RabbitMQ Management API
reqwest = { workspace = true }
urlencoding = { workspace = true }

# Core dependencies
celers-protocol = { path = "../celers-protocol", version = "0.2.0", features = ["gzip", "zlib", "zstd-compression"] }
celers-kombu = { path = "../celers-kombu", version = "0.2.0" }
celers-core = { path = "../celers-core", version = "0.2.0", optional = true }
futures-util = { workspace = true, optional = true }

[features]
amqp-events = ["dep:celers-core", "dep:futures-util"]

[dev-dependencies]
celers-core = { path = "../celers-core", version = "0.2.0" }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "amqp_benchmarks"
harness = false
