[package]
name = "celers-broker-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL broker implementation for CeleRS with FOR UPDATE SKIP LOCKED"
keywords = ["celery", "postgresql", "broker", "queue", "sql"]
categories = ["asynchronous", "database", "network-programming"]

[dependencies]
celers-core = { path = "../celers-core" }
celers-metrics = { path = "../celers-metrics", optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = []
metrics = ["celers-metrics"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "broker_benchmarks"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "monitoring_performance"
path = "examples/monitoring_performance.rs"

[[example]]
name = "advanced_utilities"
path = "examples/advanced_utilities.rs"
