[package]
name = "celers-broker-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL broker implementation for CeleRS with FOR UPDATE SKIP LOCKED"
keywords = ["celery", "postgresql", "broker", "queue", "sql"]
categories = ["asynchronous", "database", "network-programming"]

[dependencies]
celers-core = { path = "../celers-core", version = "0.2.0" }
celers-metrics = { path = "../celers-metrics", version = "0.2.0", optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = []
metrics = ["celers-metrics"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "broker_benchmarks"
harness = false

[[example]]
name = "postgres_basic_usage"
path = "examples/postgres_basic_usage.rs"

[[example]]
name = "postgres_monitoring_performance"
path = "examples/postgres_monitoring_performance.rs"

[[example]]
name = "postgres_advanced_utilities"
path = "examples/postgres_advanced_utilities.rs"
