[package]
name = "celers-broker-redis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis broker implementation for CeleRS with Lua scripts and priority queues"
keywords = ["celery", "redis", "broker", "queue", "async"]
categories = ["asynchronous", "network-programming", "caching"]

[dependencies]
celers-core = { path = "../celers-core", version = "0.2.0" }
celers-protocol = { path = "../celers-protocol", version = "0.2.0", features = ["gzip", "zlib"] }
celers-metrics = { path = "../celers-metrics", version = "0.2.0", optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true, features = ["cluster-async"] }
tracing = { workspace = true }
oxiarc-deflate = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
crc32fast = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
metrics = ["celers-metrics"]

[[bench]]
name = "redis_broker_benchmarks"
harness = false
