[package]
name = "celers-broker-sql"
version = "0.1.0"
edition = "2021"
authors = ["CeleRS Contributors"]
description = "SQL database broker implementation for CeleRS (MySQL)"
keywords = ["celery", "mysql", "broker", "queue", "sql"]
categories = ["asynchronous", "database", "network-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/celers"

[dependencies]
celers-core = { path = "../celers-core" }
celers-metrics = { path = "../celers-metrics", optional = true }
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
tracing = "0.1"
tokio = { version = "1.42", features = ["full"] }
chrono = "0.4"

# SQL client (sqlx supports both Postgres and MySQL)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "rust_decimal"] }
rust_decimal = "1.36"
flate2 = "1.0"
rand = "0.9"

[features]
default = []
metrics = ["celers-metrics"]

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"
criterion = { version = "0.8", features = ["async_tokio"] }
tracing-subscriber = "0.3"

[[bench]]
name = "broker_benchmark"
harness = false
