[package]
name = "celers-broker-sql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL database broker implementation for CeleRS (MySQL)"
keywords = ["celery", "mysql", "broker", "queue", "sql"]
categories = ["asynchronous", "database", "network-programming"]

[dependencies]
celers-core = { path = "../celers-core", version = "0.1.0" }
celers-metrics = { path = "../celers-metrics", version = "0.1.0", optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

# SQL client (sqlx supports both Postgres and MySQL)
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "rust_decimal"] }
rust_decimal = { workspace = true }
flate2 = { workspace = true }
rand = { workspace = true }

[features]
default = []
metrics = ["celers-metrics"]

[dev-dependencies]
tokio-test = { workspace = true }
futures = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "broker_benchmark"
harness = false
