[package]
name = "celers-canvas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Workflow primitives for CeleRS (Chain, Chord, Group, Map)"
keywords = ["celery", "workflow", "canvas", "chain", "chord"]
categories = ["asynchronous", "concurrency"]

[dependencies]
async-trait = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Optional dependencies
chrono = { workspace = true, optional = true }

# Core dependencies
celers-core = { path = "../celers-core", version = "0.1.0" }
celers-protocol = { path = "../celers-protocol", version = "0.1.0" }
celers-kombu = { path = "../celers-kombu", version = "0.1.0" }
celers-backend-redis = { path = "../celers-backend-redis", version = "0.1.0", optional = true }

[features]
default = []
backend-redis = ["celers-backend-redis", "chrono"]

[dev-dependencies]
tokio = { workspace = true }

[[bench]]
name = "workflow_benchmarks"
harness = false

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "advanced_benchmarks"
harness = false
