[package]
name = "celers-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for CeleRS worker and queue management"
keywords = ["celery", "cli", "worker", "queue", "management"]
categories = ["asynchronous", "command-line-utilities"]

[[bin]]
name = "celers"
path = "src/main.rs"

[dependencies]
celers-core = { path = "../celers-core" }
celers-worker = { path = "../celers-worker" }
celers-broker-redis = { path = "../celers-broker-redis" }
celers-broker-postgres = { path = "../celers-broker-postgres" }
celers-metrics = { path = "../celers-metrics" }
clap = { workspace = true }
clap_complete = "4.5.38"
clap_mangen = "0.2.24"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
toml = "0.9.10"
tabled = "0.20.0"
colored = "3.0.0"
reqwest = { version = "0.13", features = ["json"] }
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3.15.0"
